syntax = "proto3";

option go_package = "github.com/c12s/oort/proto/checkerpb";

package checkerpb;

import "common.proto";

//TODO: DOCUMENT
service CheckerService {
  rpc CheckPermission(CheckPermissionReq) returns (CheckResp) {}
}

message CheckPermissionReq {
  common.Resource principal = 1;
  common.Resource resource = 2;
  repeated common.Attribute envAttributes = 3;
  string permissionName = 4;
}

message CheckResp {
  bool allowed = 1;
}